Readme path to image

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "https://github.com/ondrek/bebusy.js.git"
   },
-  "description": "fakes developer's productivity by printing random messages to your Terminal, so you look very busy like you are compiling important shit",
+  "description": "fakes developer's productivity by printing random messages to your Terminal, so you look very busy like you are compiling some important shit..",
   "keywords": [
     "bebusy",
     "busy",
